bnfc/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCPP.y
-----------------------------------------------------------------------------

state 41 contains 1 shift/reduce conflicts.
state 42 contains 2 shift/reduce conflicts.
state 43 contains 1 shift/reduce conflicts.

terminal ':' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp16 -> Exp16                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp12 -> Exp12                             (11)
	%start_pExp11 -> Exp11                             (12)
	%start_pExp9 -> Exp9                               (13)
	%start_pExp8 -> Exp8                               (14)
	%start_pExp4 -> Exp4                               (15)
	%start_pExp3 -> Exp3                               (16)
	%start_pExp2 -> Exp2                               (17)
	%start_pExp -> Exp                                 (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pExp10 -> Exp10                             (23)
	%start_pListExp -> ListExp                         (24)
	%start_pType -> Type                               (25)
	%start_pListId -> ListId                           (26)
	Integer -> L_integ                                 (27)
	Double -> L_doubl                                  (28)
	String -> L_quoted                                 (29)
	Id -> L_Id                                         (30)
	Program -> ListDef                                 (31)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (32)
	ListDef ->                                         (33)
	ListDef -> ListDef Def                             (34)
	Arg -> Type Id                                     (35)
	ListArg ->                                         (36)
	ListArg -> Arg                                     (37)
	ListArg -> Arg ',' ListArg                         (38)
	Stm -> Exp ';'                                     (39)
	Stm -> Type ListId ';'                             (40)
	Stm -> Type Id '=' Exp ';'                         (41)
	Stm -> 'return' Exp ';'                            (42)
	Stm -> 'return' ';'                                (43)
	Stm -> 'while' '(' Exp ')' Stm                     (44)
	Stm -> '{' ListStm '}'                             (45)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (46)
	Stm -> 'cout' '<<' Exp                             (47)
	ListStm ->                                         (48)
	ListStm -> ListStm Stm                             (49)
	Exp15 -> 'true'                                    (50)
	Exp15 -> 'false'                                   (51)
	Exp15 -> Integer                                   (52)
	Exp15 -> Double                                    (53)
	Exp15 -> String                                    (54)
	Exp15 -> Id                                        (55)
	Exp15 -> Id '(' ListExp ')'                        (56)
	Exp15 -> Exp16                                     (57)
	Exp16 -> '' ' Exp16 ' ''                           (58)
	Exp16 -> Exp16 '::' Exp15                          (59)
	Exp16 -> '(' Exp ')'                               (60)
	Exp14 -> Exp15 '++'                                (61)
	Exp14 -> Exp15 '--'                                (62)
	Exp14 -> Exp15                                     (63)
	Exp13 -> '++' Exp14                                (64)
	Exp13 -> '--' Exp14                                (65)
	Exp13 -> Exp14                                     (66)
	Exp12 -> Exp12 '*' Exp13                           (67)
	Exp12 -> Exp12 '/' Exp13                           (68)
	Exp12 -> Exp13                                     (69)
	Exp11 -> Exp11 '+' Exp12                           (70)
	Exp11 -> Exp11 '-' Exp12                           (71)
	Exp11 -> Exp12                                     (72)
	Exp9 -> Exp9 '<' Exp10                             (73)
	Exp9 -> Exp9 '>' Exp10                             (74)
	Exp9 -> Exp9 '<=' Exp10                            (75)
	Exp9 -> Exp9 '>=' Exp10                            (76)
	Exp9 -> Exp10                                      (77)
	Exp8 -> Exp8 '==' Exp9                             (78)
	Exp8 -> Exp8 '!=' Exp9                             (79)
	Exp8 -> Exp9                                       (80)
	Exp4 -> Exp4 '&&' Exp5                             (81)
	Exp4 -> Exp5                                       (82)
	Exp3 -> Exp3 '||' Exp4                             (83)
	Exp3 -> Exp4                                       (84)
	Exp2 -> Exp3 '=' Exp2                              (85)
	Exp2 -> Exp3                                       (86)
	Exp -> Exp1                                        (87)
	Exp1 -> Exp2                                       (88)
	Exp5 -> Exp6                                       (89)
	Exp6 -> Exp7                                       (90)
	Exp7 -> Exp8                                       (91)
	Exp10 -> Exp11                                     (92)
	ListExp ->                                         (93)
	ListExp -> Exp                                     (94)
	ListExp -> Exp ',' ListExp                         (95)
	Type -> 'bool'                                     (96)
	Type -> 'int'                                      (97)
	Type -> 'double'                                   (98)
	Type -> 'void'                                     (99)
	Type -> 'string'                                   (100)
	ListId -> Id                                       (101)
	ListId -> Id ',' ListId                            (102)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	''             { PT _ (TS _ 1) }
	' Exp16 '      { PT _ (TS _ 2) }
	'!='           { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	'::'           { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<<'           { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'cout'         { PT _ (TS _ 25) }
	'double'       { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'void'         { PT _ (TS _ 34) }
	'while'        { PT _ (TS _ 35) }
	'{'            { PT _ (TS _ 36) }
	'||'           { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pExp15   rule  7
	%start_pExp16   rule  8
	%start_pExp14   rule  9
	%start_pExp13   rule  10
	%start_pExp12   rule  11
	%start_pExp11   rule  12
	%start_pExp9    rule  13
	%start_pExp8    rule  14
	%start_pExp4    rule  15
	%start_pExp3    rule  16
	%start_pExp2    rule  17
	%start_pExp     rule  18
	%start_pExp1    rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pExp10   rule  23
	%start_pListExp rule  24
	%start_pType    rule  25
	%start_pListId  rule  26
	Integer         rule  27
	Double          rule  28
	String          rule  29
	Id              rule  30
	Program         rule  31
	Def             rule  32
	ListDef         rules 33, 34
	Arg             rule  35
	ListArg         rules 36, 37, 38
	Stm             rules 39, 40, 41, 42, 43, 44, 45, 46, 47
	ListStm         rules 48, 49
	Exp15           rules 50, 51, 52, 53, 54, 55, 56, 57
	Exp16           rules 58, 59, 60
	Exp14           rules 61, 62, 63
	Exp13           rules 64, 65, 66
	Exp12           rules 67, 68, 69
	Exp11           rules 70, 71, 72
	Exp9            rules 73, 74, 75, 76, 77
	Exp8            rules 78, 79, 80
	Exp4            rules 81, 82
	Exp3            rules 83, 84
	Exp2            rules 85, 86
	Exp             rule  87
	Exp1            rule  88
	Exp5            rule  89
	Exp6            rule  90
	Exp7            rule  91
	Exp10           rule  92
	ListExp         rules 93, 94, 95
	Type            rules 96, 97, 98, 99, 100
	ListId          rules 101, 102

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 33
	'double'       reduce using rule 33
	'int'          reduce using rule 33
	'string'       reduce using rule 33
	'void'         reduce using rule 33
	%eof           reduce using rule 33

	Program        goto state 101
	ListDef        goto state 102

State 1


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	Def            goto state 99
	Type           goto state 100

State 2


	'bool'         reduce using rule 33
	'double'       reduce using rule 33
	'int'          reduce using rule 33
	'string'       reduce using rule 33
	'void'         reduce using rule 33
	%eof           reduce using rule 33

	ListDef        goto state 98

State 3


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	Arg            goto state 97
	Type           goto state 96

State 4


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37
	%eof           reduce using rule 36

	Arg            goto state 94
	ListArg        goto state 95
	Type           goto state 96

State 5


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'bool'         shift, and enter state 33
	'cout'         shift, and enter state 89
	'double'       shift, and enter state 34
	'false'        shift, and enter state 64
	'if'           shift, and enter state 90
	'int'          shift, and enter state 35
	'return'       shift, and enter state 91
	'string'       shift, and enter state 36
	'true'         shift, and enter state 65
	'void'         shift, and enter state 37
	'while'        shift, and enter state 92
	'{'            shift, and enter state 93
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Stm            goto state 86
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 87
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58
	Type           goto state 88

State 6


	''             reduce using rule 48
	'('            reduce using rule 48
	'++'           reduce using rule 48
	'--'           reduce using rule 48
	'bool'         reduce using rule 48
	'cout'         reduce using rule 48
	'double'       reduce using rule 48
	'false'        reduce using rule 48
	'if'           reduce using rule 48
	'int'          reduce using rule 48
	'return'       reduce using rule 48
	'string'       reduce using rule 48
	'true'         reduce using rule 48
	'void'         reduce using rule 48
	'while'        reduce using rule 48
	'{'            reduce using rule 48
	L_integ        reduce using rule 48
	L_doubl        reduce using rule 48
	L_quoted       reduce using rule 48
	L_Id           reduce using rule 48
	%eof           reduce using rule 48

	ListStm        goto state 85

State 7


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 84
	Exp16          goto state 43

State 8


	''             shift, and enter state 60
	'('            shift, and enter state 61

	Exp16          goto state 83

State 9


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 82

State 10


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 81

State 11


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 80

State 12


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 79

State 13


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 78
	Exp10          goto state 58

State 14


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 77
	Exp10          goto state 58

State 15


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 76
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58

State 16


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 75
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58

State 17


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 74
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58

State 18


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 73
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58

State 19


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp1           goto state 72
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58

State 20


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp5           goto state 71
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58

State 21


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp6           goto state 70
	Exp7           goto state 57
	Exp10          goto state 58

State 22


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp7           goto state 69
	Exp10          goto state 58

State 23


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 68

State 24


	''             shift, and enter state 60
	'('            shift, and enter state 61
	'++'           shift, and enter state 62
	'--'           shift, and enter state 63
	'false'        shift, and enter state 64
	'true'         shift, and enter state 65
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 66
	L_quoted       shift, and enter state 67
	L_Id           shift, and enter state 31
	%eof           reduce using rule 93

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp16          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 53
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Exp10          goto state 58
	ListExp        goto state 59

State 25


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	Type           goto state 32

State 26


	L_Id           shift, and enter state 31

	Id             goto state 29
	ListId         goto state 30

State 27


	L_integ        shift, and enter state 28


State 28

	Integer -> L_integ .                                (rule 27)

	''             reduce using rule 27
	'!='           reduce using rule 27
	'&&'           reduce using rule 27
	'('            reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	'+'            reduce using rule 27
	'++'           reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'--'           reduce using rule 27
	'/'            reduce using rule 27
	'::'           reduce using rule 27
	';'            reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'='            reduce using rule 27
	'=='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	'bool'         reduce using rule 27
	'cout'         reduce using rule 27
	'double'       reduce using rule 27
	'else'         reduce using rule 27
	'false'        reduce using rule 27
	'if'           reduce using rule 27
	'int'          reduce using rule 27
	'return'       reduce using rule 27
	'string'       reduce using rule 27
	'true'         reduce using rule 27
	'void'         reduce using rule 27
	'while'        reduce using rule 27
	'{'            reduce using rule 27
	'||'           reduce using rule 27
	'}'            reduce using rule 27
	L_integ        reduce using rule 27
	L_doubl        reduce using rule 27
	L_quoted       reduce using rule 27
	L_Id           reduce using rule 27
	%eof           reduce using rule 27


State 29

	ListId -> Id .                                      (rule 101)
	ListId -> Id . ',' ListId                           (rule 102)

	','            shift, and enter state 139
	';'            reduce using rule 101
	%eof           reduce using rule 101


State 30

	%start_pListId -> ListId .                          (rule 26)

	%eof           accept


State 31

	Id -> L_Id .                                        (rule 30)

	''             reduce using rule 30
	'!='           reduce using rule 30
	'&&'           reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'*'            reduce using rule 30
	'+'            reduce using rule 30
	'++'           reduce using rule 30
	','            reduce using rule 30
	'-'            reduce using rule 30
	'--'           reduce using rule 30
	'/'            reduce using rule 30
	'::'           reduce using rule 30
	';'            reduce using rule 30
	'<'            reduce using rule 30
	'<='           reduce using rule 30
	'='            reduce using rule 30
	'=='           reduce using rule 30
	'>'            reduce using rule 30
	'>='           reduce using rule 30
	'bool'         reduce using rule 30
	'cout'         reduce using rule 30
	'double'       reduce using rule 30
	'else'         reduce using rule 30
	'false'        reduce using rule 30
	'if'           reduce using rule 30
	'int'          reduce using rule 30
	'return'       reduce using rule 30
	'string'       reduce using rule 30
	'true'         reduce using rule 30
	'void'         reduce using rule 30
	'while'        reduce using rule 30
	'{'            reduce using rule 30
	'||'           reduce using rule 30
	'}'            reduce using rule 30
	L_integ        reduce using rule 30
	L_doubl        reduce using rule 30
	L_quoted       reduce using rule 30
	L_Id           reduce using rule 30
	%eof           reduce using rule 30


State 32

	%start_pType -> Type .                              (rule 25)

	%eof           accept


State 33

	Type -> 'bool' .                                    (rule 96)

	L_Id           reduce using rule 96
	%eof           reduce using rule 96


State 34

	Type -> 'double' .                                  (rule 98)

	L_Id           reduce using rule 98
	%eof           reduce using rule 98


State 35

	Type -> 'int' .                                     (rule 97)

	L_Id           reduce using rule 97
	%eof           reduce using rule 97


State 36

	Type -> 'string' .                                  (rule 100)

	L_Id           reduce using rule 100
	%eof           reduce using rule 100


State 37

	Type -> 'void' .                                    (rule 99)

	L_Id           reduce using rule 99
	%eof           reduce using rule 99


State 38

	Exp15 -> Integer .                                  (rule 52)

	''             reduce using rule 52
	'!='           reduce using rule 52
	'&&'           reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	'++'           reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'--'           reduce using rule 52
	'/'            reduce using rule 52
	'::'           reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'='            reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'bool'         reduce using rule 52
	'cout'         reduce using rule 52
	'double'       reduce using rule 52
	'else'         reduce using rule 52
	'false'        reduce using rule 52
	'if'           reduce using rule 52
	'int'          reduce using rule 52
	'return'       reduce using rule 52
	'string'       reduce using rule 52
	'true'         reduce using rule 52
	'void'         reduce using rule 52
	'while'        reduce using rule 52
	'{'            reduce using rule 52
	'||'           reduce using rule 52
	'}'            reduce using rule 52
	L_integ        reduce using rule 52
	L_doubl        reduce using rule 52
	L_quoted       reduce using rule 52
	L_Id           reduce using rule 52
	%eof           reduce using rule 52


State 39

	Exp15 -> Double .                                   (rule 53)

	''             reduce using rule 53
	'!='           reduce using rule 53
	'&&'           reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'++'           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'--'           reduce using rule 53
	'/'            reduce using rule 53
	'::'           reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'='            reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'bool'         reduce using rule 53
	'cout'         reduce using rule 53
	'double'       reduce using rule 53
	'else'         reduce using rule 53
	'false'        reduce using rule 53
	'if'           reduce using rule 53
	'int'          reduce using rule 53
	'return'       reduce using rule 53
	'string'       reduce using rule 53
	'true'         reduce using rule 53
	'void'         reduce using rule 53
	'while'        reduce using rule 53
	'{'            reduce using rule 53
	'||'           reduce using rule 53
	'}'            reduce using rule 53
	L_integ        reduce using rule 53
	L_doubl        reduce using rule 53
	L_quoted       reduce using rule 53
	L_Id           reduce using rule 53
	%eof           reduce using rule 53


State 40

	Exp15 -> String .                                   (rule 54)

	''             reduce using rule 54
	'!='           reduce using rule 54
	'&&'           reduce using rule 54
	'('            reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	'++'           reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'--'           reduce using rule 54
	'/'            reduce using rule 54
	'::'           reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'='            reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'bool'         reduce using rule 54
	'cout'         reduce using rule 54
	'double'       reduce using rule 54
	'else'         reduce using rule 54
	'false'        reduce using rule 54
	'if'           reduce using rule 54
	'int'          reduce using rule 54
	'return'       reduce using rule 54
	'string'       reduce using rule 54
	'true'         reduce using rule 54
	'void'         reduce using rule 54
	'while'        reduce using rule 54
	'{'            reduce using rule 54
	'||'           reduce using rule 54
	'}'            reduce using rule 54
	L_integ        reduce using rule 54
	L_doubl        reduce using rule 54
	L_quoted       reduce using rule 54
	L_Id           reduce using rule 54
	%eof           reduce using rule 54


State 41

	Exp15 -> Id .                                       (rule 55)
	Exp15 -> Id . '(' ListExp ')'                       (rule 56)

	''             reduce using rule 55
	'!='           reduce using rule 55
	'&&'           reduce using rule 55
	'('            shift, and enter state 138
			(reduce using rule 55)
